Refactored Mediator Name, Refactored Indicator Payload and Added the Implementation for ECC Signature verification while receiving data from FINANCE Bus

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                             </descriptorRefs>
                             <archive>
                                 <manifest>
-                                    <mainClass>tz.go.moh.him.thscp.mediator.ffars.muse.MediatorMain</mainClass>
+                                    <mainClass>tz.go.moh.him.thscp.mediator.muse.MediatorMain</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
