Refactored Mediator Properties

--- a/src/main/resources/mediator.properties
+++ b/src/main/resources/mediator.properties
@@ -14,3 +14,7 @@ destination.host=reqbin.com
 destination.api.port=443
 destination.api.path=/echo/post/json
 destination.scheme=https
+# Finance Bus Properties
+source.publicKey=publicKey
+#Private Keys used for signing responses back to Muse via the Finance Bus
+privateKey=privateKey
