Refactored mediator resources added public keys and private keys alis and passwords

--- a/src/main/resources/mediator.properties
+++ b/src/main/resources/mediator.properties
@@ -5,10 +5,10 @@ mediator.port=3020
 mediator.timeout=60000
 mediator.heartbeats=true
 # OpenHIM Core Properties
-core.host=localhost
+core.host=him-dev.moh.go.tz
 core.api.port=8080
-core.api.user=openhim-username
-core.api.password=openhim-password
+core.api.user=root@openhim.org
+core.api.password=HimTZ2021.
 # THSCP Properties
 destination.host=reqbin.com
 destination.api.port=443
@@ -16,5 +16,9 @@ destination.api.path=/echo/post/json
 destination.scheme=https
 # Finance Bus Properties
 source.publicKey=publicKey
+source.publicKeyAlias=alias
+source.publicKeyPassword=password
 #Private Keys used for signing responses back to Muse via the Finance Bus
 privateKey=privateKey
+privateKeyAlias=alias
+privateKeyPassword=password
