--- a/src/main/resources/mediator.properties
+++ b/src/main/resources/mediator.properties
@@ -7,8 +7,8 @@ mediator.heartbeats=true
 # OpenHIM Core Properties
 core.host=him-dev.moh.go.tz
 core.api.port=8080
-core.api.user=root@openhim.org
-core.api.password=HimTZ2021.
+core.api.user=openhim-username
+core.api.password=openhim-password
 # THSCP Properties
 destination.host=reqbin.com
 destination.api.port=443
