--- a/src/main/resources/mediator.properties
+++ b/src/main/resources/mediator.properties
@@ -5,7 +5,7 @@ mediator.port=3020
 mediator.timeout=60000
 mediator.heartbeats=true
 # OpenHIM Core Properties
-core.host=him-dev.moh.go.tz
+core.host=127.0.0.1
 core.api.port=8080
 core.api.user=openhim-username
 core.api.password=openhim-password
